fix: lower banner z-index

--- a/demo/src/view/components/content/styles.module.scss
+++ b/demo/src/view/components/content/styles.module.scss
@@ -7,6 +7,9 @@
 }
 
 .smart-banner-parent {
+  position: relative;
+  z-index: -1;
+
   padding: 8px;
   margin: 24px 16px;
   background-color: $blue-200;
